{
    "name": "InputAction",
    "maps": [
        {
            "name": "SkipSplashes",
            "id": "9f22b0c0-fa74-4f92-b96a-801f73468f3d",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "16989c50-8b65-4453-9c00-3fb1aa35a12b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "462a1929-f042-4f95-a71e-8a0449e089ea",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "ddef75e2-c309-47bc-af82-fa6cf212e77e",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "aa7832f9-2501-46fd-a8bb-427859f81bd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f5da7d8-2daa-4009-9daa-03c05ec48ea6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}